--- a/week-06/day-3/src/SignUpForm.css
+++ b/week-06/day-3/src/SignUpForm.css
@@ -1,26 +1,25 @@
 form {
-    /* Just to center the form on the page */
     margin: 150px auto;
     width: 800px;
     height: 500px;
-    /* To see the outline of the form */
     padding: 50px;
-    /*border: 1px solid #CCC;*/
-    /*border-radius: 4px;*/
+    border-radius: 4px;
     background-color: white;
+    box-shadow: 0 2px 2px 2px rgb(152, 152, 152);
 }
+
 body {
     background: #CCCCCC;
-}
-div [class="left_side"] {
-    width: 100px;
+    margin: 0px;
+    padding: 0px;
 }
 
 #account_login {
     font-size: 50px;
 }
+
 #username {
-    width: 250px;
+    width: 290px;
     height: 30px;
     font-size: 15px;
     padding: 5px;
@@ -30,7 +29,7 @@ div [class="left_side"] {
 }
 
 #email {
-    width: 250px;
+    width: 290px;
     height: 30px;
     font-size: 15px;
     padding: 5px;
@@ -40,7 +39,7 @@ div [class="left_side"] {
 }
 
 #password {
-    width: 250px;
+    width: 290px;
     height: 30px;
     font-size: 15px;
     padding: 5px;
@@ -50,7 +49,7 @@ div [class="left_side"] {
 }
 
 #re_password {
-    width: 250px;
+    width: 290px;
     height: 30px;
     font-size: 15px;
     padding: 5px;
@@ -66,7 +65,7 @@ div [class="left_side"] {
     width: 200px;
     border: 0px;
     border-radius: 4px;
-    font-size: 15px;
+    font-size: 20px;
     font-weight: bold;
     margin-top: 70px;
 }
@@ -79,6 +78,45 @@ div [class="left_side"] {
     border: black;
     border-radius: 30px;
     font-size: 15px;
-    margin-left: 350px;
-    margin-top: -2000px;
+    box-shadow: 0 1px 1px 1px rgb(152, 152, 152);
+}
+
+#facebook {
+    width: 350px;
+    hight: 30px;
+    margin-top: 180px;
+    background-color: rgb(50, 80, 142);
+    padding: 15px;
+    border: 0px;
+    border-radius: 4px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#twitter {
+    width: 350px;
+    hight: 30px;
+    margin-top: 30px;
+    background-color: rgb(85, 172, 238);
+    padding: 15px;
+    border: 0px;
+    border-radius: 4px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#google {
+    width: 350px;
+    hight: 30px;
+    margin-top: 30px;
+    background-color: rgb(221, 75, 57);
+    padding: 15px;
+    border: 0px;
+    border-radius: 4px;
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    /*font-family: "Bookman Old Style";*/
 }
