--- a/week-07/day-2/src/main/resources/templates/show.html
+++ b/week-07/day-2/src/main/resources/templates/show.html
@@ -26,12 +26,12 @@
 <table>
     <tr>
         <th>Bank Account Name</th>
-        <th>Balance</th>
+        <th>Balance in Zebra</th>
         <th>Animal Type</th>
     </tr>
     <tr>
         <td th:text="${bankaccount.name}"> </td>
-        <td th:text="${bankaccount.balance}"> </td>
+        <td th:text="${#numbers.formatDecimal(bankaccount.balance, 0, 'POINT', 2, 'COMMA') + ' Zebra'}"></td>
         <td th:text="${bankaccount.animalType}"> </td>
     </tr>
 </table>
