--- a/week-07/day-2/src/main/resources/templates/all.html
+++ b/week-07/day-2/src/main/resources/templates/all.html
@@ -22,20 +22,20 @@
     </style>
 </head>
 <body><h2>Bank Account</h2>
-    <table>
-        <tr>
-            <th>Bank Account Name</th>
-            <th>Balance in Zebra</th>
-            <th>Animal Type</th>
-        </tr>
-        <tr>
-            <td th:text="${bankaccount.name}"></td>
-            <td th:text="${#numbers.formatDecimal(bankaccount.balance, 0, 'POINT', 2, 'COMMA') + ' Zebra'}"></td>
-            <td th:text="${bankaccount.animalType}"></td>
-        </tr>
-    </table></br>
-        <td th:utext="${showman}"></td></br>
-        <td th:text="${showman}"></td>
-    </div>
+<table>
+    <tr>
+        <th>Bank Account Name</th>
+        <th>Balance in Zebra</th>
+        <th>Animal Type</th>
+    </tr>
+      <tr th:each="account : ${allaccount}" th:object="${account}">
+        <td  th:text="*{name}"></td>
+        <td th:text="*{#numbers.formatDecimal(balance, 0, 'POINT', 2, 'COMMA') + ' Zebra'}"></td>
+        <td th:text="*{animalType}"></td>
+    </tr>
+</table></br>
+<td th:utext="${showman}"></td></br>
+<td th:text="${showman}"></td>
+</div>
 </body>
 </html>
