Extending more is done

--- a/week-07/day-2/src/main/resources/templates/all.html
+++ b/week-07/day-2/src/main/resources/templates/all.html
@@ -21,7 +21,7 @@
         }
     </style>
 </head>
-<body><h2>Bank Account</h2>
+<body><h2>Bank of Simba</h2>
 <table>
     <tr>
         <th>Index</th>
