--- a/week-07/day-3/useful-utilities/src/main/resources/templates/email.html
+++ b/week-07/day-3/useful-utilities/src/main/resources/templates/email.html
@@ -5,9 +5,7 @@
     <link rel="stylesheet" th:href="@{/style.css}"/>
     <meta charset="utf-8"/>
 </head>
-<br>
-<h1>Hi my Dear:</h1>
-<a href="/useful/colored">COLORED BACKGROUND</a></br>
-<a href="/useful/email?email=">EMAIL ADDRESS</a>
+<body>
+<h1 th:style="${validateEmail} ? 'color: green' : 'color: red'" th:text="${validateEmail} ? 'Is valid' + ' ' + ${email} : 'It is not valid' + ' ' + ${email}"></h1>
 </body>
 </html>
