Caesar encoder/decoder exercise done

--- a/week-07/day-3/useful-utilities/src/main/resources/templates/useful.html
+++ b/week-07/day-3/useful-utilities/src/main/resources/templates/useful.html
@@ -8,6 +8,8 @@
 <br>
 <h1>Hi my Dear:</h1>
 <a href="/useful/colored">COLORED BACKGROUND</a></br>
-<a href="/useful/email?email=">EMAIL ADDRESS</a>
+<a href="/useful/email?email=">EMAIL ADDRESS</a></br>
+<a href="/useful/encoder?text=">ENCODER</a></br>
+<a href="/useful/decoder?text=">DECODER</a>
 </body>
 </html>
