Login Page with first 2 optional part done

--- a/week-07/day-4/fox-club/src/main/resources/templates/index.html
+++ b/week-07/day-4/fox-club/src/main/resources/templates/index.html
@@ -14,7 +14,7 @@
 <br>
 <img src="greenfox.png">
 <br>
-<p>This is Mr. Fox. Currently living on pizza and lemonade. He knows 2 tricks.</p>
+<p th:text="'This is Mr. ' + ${foxName} + '. Currently living on pizza and lemonade. He knows 2 tricks.'"></p>
 <h1>Known tricks</h1>
 <a>
     <ul>
