Information Page half way done

--- a/week-07/day-4/fox-club/src/main/resources/templates/index.html
+++ b/week-07/day-4/fox-club/src/main/resources/templates/index.html
@@ -14,17 +14,22 @@
 <br>
 <img src="greenfox.png">
 <br>
-<p th:text="'This is Mr. ' + ${foxName} + '. Currently living on pizza and lemonade. He knows 2 tricks.'"></p>
+<p th:text="'This is Mr. ' + ${foxName} + '. Currently living on pizza and lemonade. He knows 0 tricks.'"></p>
 <h1>Known tricks</h1>
 <a>
     <ul>
-        <li>write HTML</li>
+        <li>You know no tricks, yet. Go and learn some.</li>
     </ul>
 </a>
-<a>
-    <ul>
-        <li>code in Java</li>
-    </ul>
-</a>
+<!--<a>-->
+    <!--<ul>-->
+        <!--<li>Monkey jump</li>-->
+    <!--</ul>-->
+<!--</a>-->
+<!--<a>-->
+    <!--<ul>-->
+        <!--<li>Cobra fighting style</li>-->
+    <!--</ul>-->
+<!--</a>-->
 </body>
 </html>
