--- a/week-07/day-2/src/main/resources/templates/all.html
+++ b/week-07/day-2/src/main/resources/templates/all.html
@@ -28,13 +28,14 @@
         <th>Bank Account Name</th>
         <th>Balance in Zebra</th>
         <th>Animal Type</th>
+        <th>King / Peasant</th>
     </tr>
     <tr th:each="account : ${allaccount}" th:object="${account}">
         <td th:text="${accountStat.count}"></td>
-        <!--<td th:text="${accountStat.index}"></td> - is giving the index of the object -->
         <td th:text="*{name}"></td>
         <td th:text="*{#numbers.formatDecimal(balance, 0, 'POINT', 2, 'COMMA') + ' Zebra'}"></td>
         <td th:text="*{animalType}"></td>
+        <td th:text="*{isKing()} ? 'King' : 'Peasant'"></td>
     </tr>
 </table>
 </br>
