--- a/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
+++ b/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" th:href="@{/style.css}"/>
+    <title>Todos for today:</title>
 </head>
 <body>
-
+<h1>Todos for today:</h1>
+<h3 th:each="todos : ${todolist}" th:object="${todos}">
+    <li th:text="*{title}"></li>
+</h3>
 </body>
 </html>
