Listing ToDos from MySQL done

--- a/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
+++ b/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>Todays Todo List:</h1>
+<a href="?isActive=true">It is not done</a><br><br>
 <table>
     <tr>
         <th>ID</th>
