Add creating function done

--- a/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
+++ b/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <h1>Todays Todo List:</h1>
-<a href="?isActive=true">It is not done</a><br><br>
+<a href="?isActive=true">It is not done</a>
+<a href="/todo/add">Add new todo</a>
+<br><br>
 <table>
     <tr>
         <th>ID</th>
