todos edit modified

--- a/week-08/day-2/todo-listing/src/main/resources/templates/edit.html
+++ b/week-08/day-2/todo-listing/src/main/resources/templates/edit.html
@@ -13,7 +13,10 @@
     <input type="checkbox" th:field="*{urgent}"><br>
     <label>Done</label>
     <input type="checkbox" th:field="*{done}"><br><br>
-    <button type="submit">Submit</button>
+    <button type="submit" class="EditButton">Submit</button>
+    <a href="/todo/">
+    <button type="button">Cancel</button>
+    </a>
 </form>
 </body>
 </html>
