--- a/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
+++ b/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{/style.css}"/>
     <title>Todos for today:</title>
+
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
+    <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+
 </head>
 <body>
 <h1>Todays Todo List:</h1>
@@ -33,10 +37,14 @@
         </td>
         <td>
             <a th:href="'/todo/' + *{id} + '/edit'">
-                <button>Edit</button>
+                <button class="button">Edit</button>
             </a>
         </td>
     </tr>
 </table>
+
+<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"-->
+<!--integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+
 </body>
 </html>
