trying to configure the css

--- a/week-08/day-2/todo-listing/src/main/resources/templates/add.html
+++ b/week-08/day-2/todo-listing/src/main/resources/templates/add.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/style.css}"/>
+    <link rel="stylesheet" th:href="@{/frontend.css}"/>
 
 </head>
 <body>
@@ -10,7 +10,7 @@
 <br>
 <form method="POST">
     <input type="text" name="addNewTodo"><br>
-    <button type="submit">Add</button>
+    <button type="submit" class="inputbutton">Add</button>
 </form>
 </body>
 </html>
