--- a/week-08/day-2/todo-listing/src/main/resources/templates/edit.html
+++ b/week-08/day-2/todo-listing/src/main/resources/templates/edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/style.css}"/>
+    <link rel="stylesheet" th:href="@{/frontend.css}"/>
 </head>
 <body>
 <h1>Edit Todo</h1>
@@ -12,8 +12,8 @@
     <label>Urgent</label>
     <input type="checkbox" th:field="*{urgent}"><br>
     <label>Done</label>
-    <input type="checkbox" th:field="*{done}"><br><br>
-    <button type="submit" class="EditButton">Submit</button>
+    <input type="checkbox" th:field="*{done}" class="inputbutton"><br><br>
+    <button type="submit">Submit</button>
     <a href="/todo/">
     <button type="button">Cancel</button>
     </a>
