Todolist search done

--- a/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
+++ b/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <link rel="stylesheet" th:href="@{/frontend.css}"/>
     <title>Todos for today:</title>
 
@@ -15,6 +15,7 @@
     <a href="?isActive=true">It is not done</a>
     <a href="/todo/add">Add new todo</a>
     <a href="/todo/">Main page</a>
+    <a href="/todo/search">Search</a>
     <br><br>
 </div>
 <table>
