Todolist search done and then todoslist html repaired

--- a/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
+++ b/week-08/day-2/todo-listing/src/main/resources/templates/todoslist.html
@@ -12,7 +12,7 @@
 <body>
 <h1>Todays Todo List:</h1>
 <div class="alink">
-    <a href="?isActive=true">It is not done</a>
+    <a href="/todo/?isActive=true">It is not done</a>
     <a href="/todo/add">Add new todo</a>
     <a href="/todo/">Main page</a>
     <a href="/todo/search">Search</a>
