--- a/week-08/day-2/todo-listing/src/main/resources/templates/edit.html
+++ b/week-08/day-2/todo-listing/src/main/resources/templates/edit.html
@@ -9,6 +9,12 @@
 <form method="POST" th:object="${editTodos}">
     <label>Todo Description</label>
     <input type="text" th:field="*{title}"><br>
+    <div>
+        <label>Assignees</label>
+        <select>
+            <option th:each="assignees : ${assigneelist}" th:text="${assignees.name}" th:value="${assignees}"></option>
+        </select>
+    </div>
     <label>Urgent</label>
     <input type="checkbox" th:field="*{urgent}"><br>
     <label>Done</label>
